--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
 <resources>
     <string name="app_name">Material Design App</string>
+    <string name="item_1">item 1</string>
+    <string name="item2">item2</string>
+    <string name="item3">item3</string>
 </resources>
